# auto-dj-arduino-switch

./: .gitignore  README.md
.github/workflows/: test.yml
auto-dj-arduino-switch/: auto-dj-arduino-switch.ino  azuracast_client.cpp  azuracast_client.h  config.h  flowsheet_client.cpp  flowsheet_client.h  relay_monitor.cpp  relay_monitor.h  secrets.h.example  state_machine.cpp  state_machine.h  utils.cpp  utils.h  wifi_manager.cpp  wifi_manager.h
docs/: enclosure-specification.md  networking-spec.md  remote-access-roadmap.md  remote-administration.md  wiring.md
enclosure/: Makefile  README.md  analyze_stl.py  assembly.scad  base.scad  board_model.scad  check_positions.py  config.scad  cross_sections.scad  find_standoffs.py  lid.scad  shelf.scad  terminal_bracket.scad  test_slices.scad  verify_alignment.py
enclosure/original/: base.stl  lid.stl  shelf.stl
test/: CMakeLists.txt  test_current_hour_ms.cpp  test_location_parsing.cpp  test_state_machine.cpp  test_url_encode.cpp
test/shim/: Arduino.h
